# OneLauncher

./: .npmrc  Cargo.toml  pnpm-lock.yaml
apps/desktop/: Cargo.toml  build.rs  skins.json  tauri.conf.json  tauri.conf.patch.json
apps/desktop/permissions/onelauncher/: default.toml
apps/desktop/src/: lib.rs
apps/desktop/src/api/: commands.rs  mod.rs
apps/desktop/src/api/commands/: mod.rs  skin.rs
apps/desktop/src/ext/: menu.rs  mod.rs  updater.rs
apps/frontend/: package.json
apps/frontend/src/: RootLayout.tsx
apps/frontend/src/ui/components/content/: ModCard.tsx
apps/frontend/src/ui/components/game/: PlayerModel.tsx
apps/frontend/src/ui/components/overlay/: Modal.tsx
apps/frontend/src/ui/components/overlay/account/: AccountsPopup.tsx
apps/frontend/src/ui/pages/settings/: SettingsRoot.tsx
apps/frontend/src/ui/pages/settings/account/: SkinChanger.tsx
apps/frontend/src/ui/pages/settings/game/: SettingsAccounts.tsx
